# FFmpegDemo

./: log.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lanshifu/ffmpegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/shader/camera/: camera2_fragment_shader_beauty.glsl  camera2_vertex_shader_base.glsl  camera2_vertex_shader_beauty.glsl
app/src/main/cmake_test/cmake_test1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cmake_test.txt  hello.cpp  libhello_lib.dylib  liblibavcodec.dylib  out_hello
app/src/main/cpp/audio/: AudioManager.cpp  AudioManager.h  ConstantDefind.h  FFmpeg.cpp  FFmpeg.h  PacketQueue.cpp  PacketQueue.h  PlayerJNICall.cpp  PlayerJNICall.h  PlayerStatus.cpp  PlayerStatus.h  music-player.cpp
app/src/main/cpp/push/: PushHandle.cpp  PushJniCall.cpp  PushJniCall.h  PushStatus.cpp  PushStatus.h  log.h
app/src/main/cpp/push_rtmp/: ErrorCode.h  LivePush.cpp  LivePush.h  PacketQueue.cpp  PacketQueue.h  PushJniCall.cpp  PushJniCall.h  RtmpPushHandle.cpp
app/src/main/cpp/push_rtmp/librtmp/: amf.c  amf.h  bytes.h  dh.h  dhgroups.h  handshake.h  hashswf.c  http.h  log.c  log.h  parseurl.c  rtmp.c  rtmp.h  rtmp_sys.h
app/src/main/cpp/video/: video-player.cpp
app/src/main/java/com/lanshifu/ffmpegdemo/: CameraActivity.java  MainActivity.java  SelectActivity.java
app/src/main/java/com/lanshifu/ffmpegdemo/audio/: AudioRecordActivity.java  PcmToWavUtil.java
app/src/main/java/com/lanshifu/ffmpegdemo/avcodec/: AvCodecActivity.java
app/src/main/java/com/lanshifu/ffmpegdemo/avcodec/audio/: AudioManager.java
app/src/main/java/com/lanshifu/ffmpegdemo/avcodec/codec/: MediaEncodeManager.java  MediaMuxerChangeListener.java  VideoEncodeRender.java
app/src/main/java/com/lanshifu/ffmpegdemo/avcodec/codec/thread/: AudioCodecThread.java  EglRenderThread.java  VideoCodecThread.java
app/src/main/java/com/lanshifu/ffmpegdemo/avcodec/surface/: CameraFBORender.java  CameraManager.java  CameraRender.java  CameraSurfaceView.java  EglHelper.java  EglSurfaceView.java
app/src/main/java/com/lanshifu/ffmpegdemo/camera/: CameraHelper.java  CameraRender.java
app/src/main/java/com/lanshifu/ffmpegdemo/camera/filter/: GrayFilterRender.java
app/src/main/java/com/lanshifu/ffmpegdemo/camera/widget/: CameraFocusView.java  CameraView.java
app/src/main/java/com/lanshifu/ffmpegdemo/opengl/: BaseGLSurfaceView.java  BaseRender.java  EglHelper.java  FboRender.java  IFboRender.java  Utils.java
app/src/main/java/com/lanshifu/ffmpegdemo/player/: MusicPlayer.java  VideoPlayer.java  VideoView.java
app/src/main/java/com/lanshifu/ffmpegdemo/player/listener/: MusicPlayListener.java  MusicPrepareListener.java
app/src/main/java/com/lanshifu/ffmpegdemo/push/: FilePushActivity.java  PushCallback.java  PushHandle.java
app/src/main/java/com/lanshifu/ffmpegdemo/push_live/: BaseVideoPush.java  DefaultVideoPush.java  LivePushActivity.java  LivePushHandle.java  PushRenderer.java
app/src/main/java/com/lanshifu/ffmpegdemo/record/: BaseVideoRecorder.java  DefaultVideoRecorder.java  RecorderRenderer.java
app/src/main/java/com/lanshifu/ffmpegdemo/record/thread/: AudioEncoderThread.java  AudioRecordThread.java  VideoEncoderThread.java  VideoRenderThread.java
app/src/main/java/com/lanshifu/ffmpegdemo/utils/: DisplayUtils.java  GLUtil.java  ShaderManager.java
app/src/main/res/layout/: activity_audio_record.xml  activity_avcodec.xml  activity_camera.xml  activity_livepush.xml  activity_main.xml  activity_push.xml  activity_select.xml
app/src/main/res/raw/: vertex_shader_matrix.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/com/lanshifu/ffmpegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
src/main/java/defpackage/: dh.java  di.java  dj.java  dk.java  dl.java  dm.java  dn.java  do.java  dp.java  dq.java  dr.java  ds.java  dt.java  du.java  dv.java  dw.java  dx.java  dy.java  dz.java  e.java  ea.java  eb.java  ec.java  ed.java  ee.java  ef.java  eg.java  eh.java  ei.java  ej.java  ek.java  el.java  em.java  en.java  eo.java  ep.java  eq.java  er.java  es.java  et.java  (+576 more)
src/main/java/kotlin/: NotImplementedError.java  Pair.java  b.java  c.java  d.java
src/main/java/okhttp3/: Cache$CacheRequestImpl.java  Cache$CacheResponseBody$1.java  CacheControl$Builder.java  CertificatePinner$Builder.java  CertificatePinner$Pin.java  CipherSuite.java  ConnectionPool$1.java  Cookie$Builder.java  Protocol.java  (+5 more)
(+1446 files in other folders)
